feat: adicionar associação de usuário nas reservas e implementar busca por reservas do usuário